first version project

--- a/index.html
+++ b/index.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
 <html lang="ru">
   <head>
-    <link rel="stylesheet" href="pages/index.css" />
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="pages/index.css">
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Путешествия по России</title>
   </head>
 
@@ -14,8 +14,7 @@
           <img
             class="header__logo"
             alt="Логотип страницы"
-            src="images/header-logo.svg"
-          />
+            src="images/header-logo.svg">
           <div class="header__lang-links">
             <a class="header__lang-link header__lang-link_active" href="#"
               >Ru</a
@@ -25,7 +24,7 @@
         </div>
       </header>
       <section class="lead">
-        <div calss="lead__text-conteiner">
+        <div class="lead__text-conteiner">
           <h1 class="lead__title">Путешествия по России</h1>
           <p class="lead__subtitle">
             Настоящая страна не в выпусках новостей, а здесь.
@@ -35,8 +34,7 @@
           <img
             class="lead__image"
             alt="Девушка лежит на нижней боковой полке плацкарта"
-            src="images/lead-polka.jpg"
-          />
+            src="images/lead-polka.jpg">
           <p class="lead__caption">ваша полка — верхняя</p>
         </div>
       </section>
@@ -73,84 +71,70 @@
           </li>
         </ul>
       </section>
-      <section class="photo-grid">
+      <div class="photo-grid">
         <div class="photo-grid__conteiner">
           <img
             class="photo-grid__image"
             alt="Вид из окна плацкарта"
-            src="images/photo-grid-train.jpg"
-          />
+            src="images/photo-grid-train.jpg">
           <img
             class="photo-grid__image"
             alt="Вид на заснежные горы"
-            src="images/photo-grid-atharva-tulsi.jpg"
-          />
+            src="images/photo-grid-atharva-tulsi.jpg">
           <img
             class="photo-grid__image"
             alt="Туман в поле"
-            src="images/photo-grid-tuman.jpg"
-          />
+            src="images/photo-grid-tuman.jpg">
           <img
             class="photo-grid__image"
             alt="Вид на туманный горный лес"
-            src="images/photo-grid-sochi.jpg"
-          />
+            src="images/photo-grid-sochi.jpg">
           <img
             class="photo-grid__image"
             alt="Автомобиль на льду"
-            src="images/photo-grid-arisa.jpg"
-          />
+            src="images/photo-grid-arisa.jpg">
           <img
             class="photo-grid__image"
             alt="Берег Байкала"
-            src="images/photo-grid-baikal.jpg"
-          />
+            src="images/photo-grid-baikal.jpg">
           <img
             class="photo-grid__image"
             alt="Фотография Эльбруса"
-            src="images/photo-grid-elbrus.jpg"
-          />
+            src="images/photo-grid-elbrus.jpg">
           <img
             class="photo-grid__image"
             alt="Знак пешеходный переход"
-            src="images/photo-grid-kondratiev.jpg"
-          />
+            src="images/photo-grid-kondratiev.jpg">
           <img
             class="photo-grid__image"
             alt="Вид на горы Камчатки"
-            src="images/photo-grid-kamchatka-1.jpg"
-          />
+            src="images/photo-grid-kamchatka-1.jpg">
           <img
             class="photo-grid__image"
             alt="Вершина горы на Камчатке"
-            src="images/photo-grid-kamchatka-2.jpg"
-          />
+            src="images/photo-grid-kamchatka-2.jpg">
           <img
             class="photo-grid__image"
             alt="Склоны берега озера Байкал"
-            src="images/photo-grid-baikal-2.jpg"
-          />
+            src="images/photo-grid-baikal-2.jpg">
           <img
             class="photo-grid__image"
             alt="Ландшафт природного парка Ергаки"
-            src="images/photo-grid-ergaki.jpg"
-          />
+            src="images/photo-grid-ergaki.jpg">
         </div>
-      </section>
+      </div>
       <section class="places">
         <div class="places__card">
           <h2 class="places__title">Куршская коса</h2>
           <div class="places__website">
             <p class="places__url">URL</p>
             <a class="places__link" href="http://park-kosa.ru" target="_blank"
-              >park-kosa.ru</a
-            >
+              >park-kosa.ru</a>
           </div>
           <img
             class="places__image"
             alt="Затопленные леса"
-            src="images/place-kosa.jpg"
-          />
+            src="images/place-kosa.jpg">
           <div class="places__text-conteiner">
             <p class="places__text">
               Здесь, посреди лесов и песчаных дюн, вы сможете увидеть два водных
@@ -184,8 +168,7 @@
           <img
             class="places__image"
             alt="Скалы побережья Кольского полуострова"
-            src="images/place-kolsky.jpg"
-          />
+            src="images/place-kolsky.jpg">
           <div class="places__text-conteiner">
             <p class="places__text">
               Почти весь полуостров находится за Полярным кругом. Саамская
@@ -219,8 +202,7 @@
           <img
             class="places__image"
             alt="Ноутбук на фоне леса"
-            src="images/place-altai.jpg"
-          />
+            src="images/place-altai.jpg">
           <div class="places__text-conteiner">
             <p class="places__text">
               Алтай — одно из красивейших мест в России. В первую очередь из-за
@@ -247,14 +229,12 @@
               class="places__link"
               href="https://vk.com/baikalmile"
               target="_blank"
-              >https://vk.com/baikalmile</a
-            >
+              >https://vk.com/baikalmile</a>
           </div>
           <img
             class="places__image"
             alt="Трещины во льду"
-            src="images/place-winter-baikal.jpg"
-          />
+            src="images/place-winter-baikal.jpg">
           <div class="places__text-conteiner">
             <p class="places__text">
               Всем известен Байкал как крупнейшее озеро в мире. Многие также
@@ -277,14 +257,12 @@
           <div class="places__website">
             <p class="places__url">URL</p>
             <a class="places__link" href="http://vodlozero.ru" target="_blank"
-              >http://vodlozero.ru/</a
-            >
+              >http://vodlozero.ru/</a>
           </div>
           <img
             class="places__image"
             alt="Пейзажи Карелии"
-            src="images/place-karelia.jpg"
-          />
+            src="images/place-karelia.jpg">
           <div class="places__text-conteiner">
             <p class="places__text">
               Сибирь заканчивается не на Урале, а в Карелии: образующая тайгу
@@ -309,8 +287,7 @@
           <img
             class="cover__image"
             src="images/cover-trains.jpg"
-            alt="Железнодорожный перевалочный пункт"
-          />
+            alt="Железнодорожный перевалочный пункт">
           <div class="cover__text">
             <h3 class="cover__title">До Байкала «на собаках»</h3>
             <p class="cover__subtitle">
@@ -320,7 +297,7 @@
           </div>
         </a>
       </section>
-      <section class="footer">
+      <footer class="footer">
         <div class="footer__links">
           <a class="footer__link" href="https://yandex.ru/maps" target="_blank"
             >Карты</a
@@ -348,7 +325,7 @@
           >
         </div>
         <p class="footer__copyright">© 2023. Никита Алексанкин</p>
-      </section>
+      </footer>
     </main>
   </body>
 </html>
