--- a/index.html
+++ b/index.html
@@ -7,36 +7,30 @@
     <title>Путешествия по России</title>
   </head>
 
-  <body>
-    <main class="page">
-      <header class="header">
-        <div class="header__conteiner">
-          <img
-            class="header__logo"
-            alt="Логотип страницы"
-            src="images/header-logo.svg">
-          <div class="header__lang-links">
-            <a class="header__lang-link header__lang-link_active" href="#"
-              >Ru</a
-            >
-            <a class="header__lang-link" href="#">En</a>
-          </div>
-        </div>
-      </header>
+  <body class="page">
+    <header class="header">
+      <img
+        class="header__logo"
+        alt="Логотип страницы"
+        src="images/header-logo.svg">
+      <div class="header__lang-links">
+        <a class="header__lang-link header__lang-link_active" href="#"
+          >Ru</a
+        >
+        <a class="header__lang-link" href="#">En</a>
+      </div>
+    </header>
+    <main class="main">
       <section class="lead">
-        <div class="lead__text-conteiner">
-          <h1 class="lead__title">Путешествия по России</h1>
-          <p class="lead__subtitle">
-            Настоящая страна не в выпусках новостей, а здесь.
-          </p>
-        </div>
-        <div class="lead__figure">
-          <img
-            class="lead__image"
-            alt="Девушка лежит на нижней боковой полке плацкарта"
-            src="images/lead-polka.jpg">
-          <p class="lead__caption">ваша полка — верхняя</p>
-        </div>
+        <h1 class="lead__title">Путешествия по России</h1>
+        <p class="lead__subtitle">
+          Настоящая страна не в выпусках новостей, а здесь.
+        </p>
+        <img
+          class="lead__image"
+          alt="Девушка лежит на нижней боковой полке плацкарта"
+          src="images/lead-polka.jpg">
+        <p class="lead__caption">ваша полка — верхняя</p>
       </section>
       <section class="intro">
         <h2 class="intro__title">Чего мы там не видели?</h2>
@@ -71,58 +65,56 @@
           </li>
         </ul>
       </section>
-      <div class="photo-grid">
-        <div class="photo-grid__conteiner">
-          <img
-            class="photo-grid__image"
-            alt="Вид из окна плацкарта"
-            src="images/photo-grid-train.jpg">
-          <img
-            class="photo-grid__image"
-            alt="Вид на заснежные горы"
-            src="images/photo-grid-atharva-tulsi.jpg">
-          <img
-            class="photo-grid__image"
-            alt="Туман в поле"
-            src="images/photo-grid-tuman.jpg">
-          <img
-            class="photo-grid__image"
-            alt="Вид на туманный горный лес"
-            src="images/photo-grid-sochi.jpg">
-          <img
-            class="photo-grid__image"
-            alt="Автомобиль на льду"
-            src="images/photo-grid-arisa.jpg">
-          <img
-            class="photo-grid__image"
-            alt="Берег Байкала"
-            src="images/photo-grid-baikal.jpg">
-          <img
-            class="photo-grid__image"
-            alt="Фотография Эльбруса"
-            src="images/photo-grid-elbrus.jpg">
-          <img
-            class="photo-grid__image"
-            alt="Знак пешеходный переход"
-            src="images/photo-grid-kondratiev.jpg">
-          <img
-            class="photo-grid__image"
-            alt="Вид на горы Камчатки"
-            src="images/photo-grid-kamchatka-1.jpg">
-          <img
-            class="photo-grid__image"
-            alt="Вершина горы на Камчатке"
-            src="images/photo-grid-kamchatka-2.jpg">
-          <img
-            class="photo-grid__image"
-            alt="Склоны берега озера Байкал"
-            src="images/photo-grid-baikal-2.jpg">
-          <img
-            class="photo-grid__image"
-            alt="Ландшафт природного парка Ергаки"
-            src="images/photo-grid-ergaki.jpg">
-        </div>
-      </div>
+      <section class="photo-grid">
+        <img
+          class="photo-grid__image"
+          alt="Вид из окна плацкарта"
+          src="images/photo-grid-train.jpg">
+        <img
+          class="photo-grid__image"
+          alt="Вид на заснежные горы"
+          src="images/photo-grid-atharva-tulsi.jpg">
+        <img
+          class="photo-grid__image"
+          alt="Туман в поле"
+          src="images/photo-grid-tuman.jpg">
+        <img
+          class="photo-grid__image"
+          alt="Вид на туманный горный лес"
+          src="images/photo-grid-sochi.jpg">
+        <img
+          class="photo-grid__image"
+          alt="Автомобиль на льду"
+          src="images/photo-grid-arisa.jpg">
+        <img
+          class="photo-grid__image"
+          alt="Берег Байкала"
+          src="images/photo-grid-baikal.jpg">
+        <img
+          class="photo-grid__image"
+          alt="Фотография Эльбруса"
+          src="images/photo-grid-elbrus.jpg">
+        <img
+          class="photo-grid__image"
+          alt="Знак пешеходный переход"
+          src="images/photo-grid-kondratiev.jpg">
+        <img
+          class="photo-grid__image"
+          alt="Вид на горы Камчатки"
+          src="images/photo-grid-kamchatka-1.jpg">
+        <img
+          class="photo-grid__image"
+          alt="Вершина горы на Камчатке"
+          src="images/photo-grid-kamchatka-2.jpg">
+        <img
+          class="photo-grid__image"
+          alt="Склоны берега озера Байкал"
+          src="images/photo-grid-baikal-2.jpg">
+        <img
+          class="photo-grid__image"
+          alt="Ландшафт природного парка Ергаки"
+          src="images/photo-grid-ergaki.jpg">
+      </section>
       <section class="places">
         <div class="places__card">
           <h2 class="places__title">Куршская коса</h2>
@@ -152,8 +144,6 @@
             </p>
           </div>
         </div>
-      </section>
-      <section class="places">
         <div class="places__card">
           <h2 class="places__title">Кольский</h2>
           <div class="places__website">
@@ -186,8 +176,6 @@
             </p>
           </div>
         </div>
-      </section>
-      <section class="places">
         <div class="places__card">
           <h2 class="places__title">Алтай</h2>
           <div class="places__website">
@@ -219,8 +207,6 @@
             </p>
           </div>
         </div>
-      </section>
-      <section class="places">
         <div class="places__card">
           <h2 class="places__title">Зимний Байкал</h2>
           <div class="places__website">
@@ -250,8 +236,6 @@
             </p>
           </div>
         </div>
-      </section>
-      <section class="places">
         <div class="places__card">
           <h2 class="places__title">Карелия</h2>
           <div class="places__website">
@@ -279,53 +263,40 @@
         </div>
       </section>
       <section class="cover">
-        <a
-          class="cover__link"
-          href="https://stampsy.com/na-elektrichkakh-do-baikala"
-          target="_blank"
-        >
-          <img
-            class="cover__image"
-            src="images/cover-trains.jpg"
-            alt="Железнодорожный перевалочный пункт">
-          <div class="cover__text">
-            <h3 class="cover__title">До Байкала «на собаках»</h3>
-            <p class="cover__subtitle">
-              По мотивам учебной темы о Транссибе — путешествие от столицы до
-              Байкала на электричках.
-            </p>
-          </div>
+        <a href="https://stampsy.com/na-elektrichkakh-do-baikala" target="_blank" class="cover__link">
+            <h2 class="cover__title">До Байкала «на собаках»</h2>
+            <p class="cover__subtitle">По мотивам учебной темы о Транссибе — путешествие от столицы до Байкала на электричках.</p>
         </a>
       </section>
-      <footer class="footer">
-        <div class="footer__links">
-          <a class="footer__link" href="https://yandex.ru/maps" target="_blank"
-            >Карты</a
-          >
-          <a
-            class="footer__link"
-            href="https://yandex.ru/pogoda"
-            target="_blank"
-            >Погода</a
-          >
-          <a class="footer__link" href="https://rasp.yandex.ru" target="_blank"
-            >Расписание</a
-          >
-          <a
-            class="footer__link"
-            href="https://calendar.yandex.ru"
-            target="_blank"
-            >Календарь</a
-          >
-          <a
-            class="footer__link"
-            href="https://travel.yandex.ru"
-            target="_blank"
-            >Путешествия</a
-          >
-        </div>
-        <p class="footer__copyright">© 2023. Никита Алексанкин</p>
-      </footer>
     </main>
+    <footer class="footer">
+      <nav class="footer__links">
+        <a class="footer__link" href="https://yandex.ru/maps" target="_blank"
+          >Карты</a
+        >
+        <a
+          class="footer__link"
+          href="https://yandex.ru/pogoda"
+          target="_blank"
+          >Погода</a
+        >
+        <a class="footer__link" href="https://rasp.yandex.ru" target="_blank"
+          >Расписание</a
+        >
+        <a
+          class="footer__link"
+          href="https://calendar.yandex.ru"
+          target="_blank"
+          >Календарь</a
+        >
+        <a
+          class="footer__link"
+          href="https://travel.yandex.ru"
+          target="_blank"
+          >Путешествия</a
+        >
+      </nav>
+      <p class="footer__copyright">© 2023. Никита Алексанкин</p>
+    </footer>
   </body>
 </html>
